--- a/n01642795Cumulative1/n01642795Cumulative1.csproj
+++ b/n01642795Cumulative1/n01642795Cumulative1.csproj
@@ -301,6 +301,7 @@
     <Content Include="Views\Course\Show.cshtml" />
     <Content Include="Views\Teacher\DeleteConfirm.cshtml" />
     <Content Include="Views\Teacher\New.cshtml" />
+    <Content Include="Views\Teacher\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
